Source/WebCore/css/StyleProperties.cpp
@@ -145,13 +145,19 @@ MutableStyleProperties::MutableStyleProperties(const StyleProperties& other)
 
 String StyleProperties::commonShorthandChecks(const StylePropertyShorthand& shorthand) const
 {
+    std::optional<CSSValueID> specialKeyword;
+    bool allSpecialKeywords = true;
     std::optional<bool> importance;
     size_t numSetFromShorthand = 0;
     for (auto longhand : shorthand) {
         // FIXME: Shouldn't serialize the shorthand if some longhand is missing.
         int propertyIndex = findPropertyIndex(longhand);
-        if (propertyIndex == -1)
+        if (propertyIndex == -1) {
+            if (specialKeyword)
+                return emptyString();
+            allSpecialKeywords = false;
             continue;
+        }
         auto property = propertyAt(propertyIndex);
 
         // Don't serialize the shorthand if longhands have different importance.
@@ -161,6 +167,22 @@ String StyleProperties::commonShorthandChecks(const StylePropertyShorthand& shor
         importance = isImportant;
 
         auto value = property.value();
+
+        // Don't serialize the shorthand if longhands have different CSS-wide keywords.
+        if (!value->isCSSWideKeyword() || value->isImplicitInitialValue()) {
+            if (specialKeyword)
+                return emptyString();
+            allSpecialKeywords = false;
+        } else {
+            if (!allSpecialKeywords)
+                return emptyString();
+            auto keyword = valueID(value);
+            if (specialKeyword.value_or(keyword) != keyword)
+                return emptyString();
+            specialKeyword = keyword;
+            continue;
+        }
+
         auto hasBeenSetFromLonghand = is<CSSVariableReferenceValue>(value);
         auto hasBeenSetFromShorthand = is<CSSPendingSubstitutionValue>(value);
         auto hasNotBeenSetFromRequestedShorthand = hasBeenSetFromShorthand && downcast<CSSPendingSubstitutionValue>(*value).shorthandPropertyId() != shorthand.id();
@@ -172,12 +194,14 @@ String StyleProperties::commonShorthandChecks(const StylePropertyShorthand& shor
         if (hasBeenSetFromShorthand)
             numSetFromShorthand += 1;
     }
+    if (specialKeyword)
+        return nameString(*specialKeyword);
     if (numSetFromShorthand) {
         if (numSetFromShorthand != shorthand.length())
             return emptyString();
-        return downcast<CSSPendingSubstitutionValue>(* getPropertyCSSValue(shorthand.properties()[0])).shorthandValue().cssText();
+        return downcast<CSSPendingSubstitutionValue>(*getPropertyCSSValue(shorthand.properties()[0])).shorthandValue().cssText();
     }
-    return nullString();
+    return { };
 }
 
 String StyleProperties::getPropertyValue(CSSPropertyID propertyID) const
@@ -395,7 +419,7 @@ static std::optional<CSSValueID> fontStretchKeyword(double value)
 String StyleProperties::fontValue(const StylePropertyShorthand& shorthand) const
 {
     ASSERT(shorthand.id() == CSSPropertyFont);
-    // If all properties are set to the same special keyword, serialize as that.
+    // If all properties are set to the same system font shorthand, serialize as that.
     // If some but not all properties are, the font shorthand can't represent that, serialize as empty string.
     std::optional<CSSValueID> specialKeyword;
     bool allSpecialKeywords = true;
@@ -403,7 +427,7 @@ String StyleProperties::fontValue(const StylePropertyShorthand& shorthand) const
         // Can't call propertyAsValueID here because we need to bypass the isSystemFontShorthand check in getPropertyCSSValue.
         int index = findPropertyIndex(property);
         auto keyword = index == -1 ? CSSValueInvalid : valueID(propertyAt(index).value());
-        if (!CSSPropertyParserHelpers::isSystemFontShorthand(keyword) && !isCSSWideKeyword(keyword))
+        if (!CSSPropertyParserHelpers::isSystemFontShorthand(keyword))
             allSpecialKeywords = false;
         else {
             if (specialKeyword.value_or(keyword) != keyword)
@@ -563,7 +587,6 @@ String StyleProperties::fontVariantValue(const StylePropertyShorthand& shorthand
 {
     ASSERT(shorthand.id() == CSSPropertyFontVariant);
     StringBuilder result;
-    std::optional<CSSValueID> commonCSSWideKeyword;
     bool isAllNormal = true;
     auto ligaturesKeyword = propertyAsValueID(CSSPropertyFontVariantLigatures);
 
@@ -575,17 +598,6 @@ String StyleProperties::fontVariantValue(const StylePropertyShorthand& shorthand
         // Bypass getPropertyCSSValue which will return an empty string for system keywords.
         auto value = propertyAt(foundPropertyIndex).value();
         auto keyword = valueID(value);
-
-        // If all properties are set to the same special keyword, serialize as that.
-        // If some but not all properties are, the shorthand can't represent that, serialize as empty string.
-        if (isCSSWideKeyword(keyword)) {
-            if (commonCSSWideKeyword.value_or(keyword) != keyword)
-                return emptyString();
-            commonCSSWideKeyword = keyword;
-            continue;
-        }
-        if (commonCSSWideKeyword)
-            return emptyString();
 
         // Skip normal for brevity.
         if (keyword == CSSValueNormal)
@@ -604,9 +616,6 @@ String StyleProperties::fontVariantValue(const StylePropertyShorthand& shorthand
         result.append(result.isEmpty() ? "" : " ", value->cssText());
     }
 
-    if (commonCSSWideKeyword)
-        return nameString(*commonCSSWideKeyword);
-
     if (result.isEmpty() && isAllNormal)
         return nameString(CSSValueNormal);
 
@@ -621,13 +630,8 @@ String StyleProperties::fontSynthesisValue() const
     auto style = propertyAsValueID(CSSPropertyFontSynthesisStyle).value_or(CSSValueInvalid);
     auto caps = propertyAsValueID(CSSPropertyFontSynthesisSmallCaps).value_or(CSSValueInvalid);
 
-    // Handle `none` or CSS wide-keywords that are common to all longhands.
-    if ((isCSSWideKeyword(weight) || weight == CSSValueNone) && weight == style && weight == caps)
-        return nameString(weight);
-
-    // If one of the longhands is a CSS-wide keyword but not all of them are, this is not a valid shorthand.
-    if (isCSSWideKeyword(weight) || isCSSWideKeyword(style) || isCSSWideKeyword(caps))
-        return emptyString();
+    if (weight == CSSValueNone && style == CSSValueNone && caps == CSSValueNone)
+        return nameString(CSSValueNone);
 
     StringBuilder result;
     if (weight == CSSValueAuto)
@@ -655,9 +659,6 @@ String StyleProperties::get2Values(const StylePropertyShorthand& shorthand) cons
     // All 2 properties must be specified.
     if (!start.value() || !end.value())
         return { };
-
-    if (start.isInherited() && end.isInherited())
-        return nameString(CSSValueInherit);
 
     if (start.value()->isInitialValue() || end.value()->isInitialValue()) {
         if (start.value()->isInitialValue() && end.value()->isInitialValue() && !start.isImplicit())
@@ -749,8 +750,6 @@ String StyleProperties::getLayeredShorthandValue(const StylePropertyShorthand& s
             numLayers = std::max<size_t>(1U, numLayers);
     }
 
-    String commonValue;
-
     // Now stitch the properties together.
     // Implicit initial values are flagged as such and can safely be omitted.
     for (size_t i = 0; i < numLayers; i++) {
@@ -841,11 +840,6 @@ String StyleProperties::getLayeredShorthandValue(const StylePropertyShorthand& s
                 if (property == CSSPropertyBackgroundPositionY || property == CSSPropertyWebkitMaskPositionY)
                     foundPositionYCSSProperty = true;
             }
-
-            if (commonValue.isNull())
-                commonValue = valueText;
-            else if (commonValue != valueText)
-                commonValue = emptyString(); // Could use value here other than a CSS-wide value keyword or the null string.
         }
 
         if (shorthand.id() == CSSPropertyMask && layerResult.isEmpty())
@@ -854,9 +848,6 @@ String StyleProperties::getLayeredShorthandValue(const StylePropertyShorthand& s
         if (!layerResult.isEmpty())
             result.append(result.isEmpty() ? "" : ", ", layerResult.toString());
     }
-
-    if (isCSSWideValueKeyword(commonValue))
-        return commonValue;
 
     return result.isEmpty() ? String() : result.toString();
 }
@@ -1062,30 +1053,15 @@ String StyleProperties::getGridAreaShorthandValue() const
 
 String StyleProperties::getShorthandValue(const StylePropertyShorthand& shorthand, const char* separator) const
 {
-    String commonValue;
     StringBuilder result;
-    for (unsigned i = 0; i < shorthand.length(); ++i) {
-        if (!isPropertyImplicit(shorthand.properties()[i])) {
-            auto value = getPropertyCSSValue(shorthand.properties()[i]);
-            if (!value)
-                return String();
-            String valueText = value->cssText();
-            if (!i)
-                commonValue = valueText;
-            else if (!commonValue.isNull() && commonValue != valueText)
-                commonValue = String();
-            if (value->isInitialValue())
-                continue;
-            if (!result.isEmpty())
-                result.append(separator);
-            result.append(valueText);
-        } else
-            commonValue = String();
+    for (auto longhand : shorthand) {
+        if (isPropertyImplicit(longhand))
+            continue;
+        auto value = getPropertyCSSValue(longhand);
+        if (!value)
+            return String();
+        result.append(result.isEmpty() ? "" : separator, value->cssText());
     }
-    if (isCSSWideValueKeyword(commonValue))
-        return commonValue;
-    if (result.isEmpty())
-        return String();
     return result.toString();
 }
 
@@ -1093,11 +1069,10 @@ String StyleProperties::getShorthandValue(const StylePropertyShorthand& shorthan
 String StyleProperties::getCommonValue(const StylePropertyShorthand& shorthand) const
 {
     String result;
-    for (unsigned i = 0; i < shorthand.length(); ++i) {
-        auto value = getPropertyCSSValue(shorthand.properties()[i]);
-        if (!value)
+    for (auto longhand : shorthand) {
+        auto value = getPropertyCSSValue(longhand);
+        if (!value || value->isImplicitInitialValue())
             return String();
-        // FIXME: CSSInitialValue::cssText should generate the right value.
         String text = value->cssText();
         if (text.isNull())
             return String();
@@ -1112,9 +1087,7 @@ String StyleProperties::getCommonValue(const StylePropertyShorthand& shorthand) 
 String StyleProperties::getAlignmentShorthandValue(const StylePropertyShorthand& shorthand) const
 {
     String value = getCommonValue(shorthand);
-    if (value.isNull() || value.isEmpty())
-        return getShorthandValue(shorthand);
-    return value;
+    return value.isEmpty() ? getShorthandValue(shorthand) : value;
 }
 
 String StyleProperties::borderImagePropertyValue(const StylePropertyShorthand& shorthand) const
@@ -1125,9 +1098,8 @@ String StyleProperties::borderImagePropertyValue(const StylePropertyShorthand& s
     bool omittedWidth = false;
     String commonWideValueText;
     auto separator = "";
-    for (unsigned i = 0; i < shorthand.length(); ++i) {
+    for (auto longhand : shorthand) {
         // All longhands should be present.
-        auto longhand = shorthand.properties()[i];
         auto value = getPropertyCSSValue(longhand);
         if (!value)
             return String();
@@ -1156,17 +1128,6 @@ String StyleProperties::borderImagePropertyValue(const StylePropertyShorthand& s
         } else
             valueText = value->cssText();
 
-        // If any longhand is set to a CSS-wide keyword, the others must be the same.
-        if (isCSSWideValueKeyword(valueText)) {
-            if (!i)
-                commonWideValueText = valueText;
-            else if (commonWideValueText != valueText)
-                return String();
-            continue;
-        }
-        if (!commonWideValueText.isNull())
-            return String();
-
         // Append separator and text.
         if (longhand == CSSPropertyBorderImageWidth)
             separator = " / ";
@@ -1185,24 +1146,10 @@ String StyleProperties::borderRadiusShorthandValue(const StylePropertyShorthand&
     ASSERT(shorthand.length() == 4);
     RefPtr<CSSPrimitiveValue> horizontalRadii[4];
     RefPtr<CSSPrimitiveValue> verticalRadii[4];
-    CSSValueID cssWideKeyword = CSSValueInvalid;
     for (unsigned i = 0; i < 4; ++i) {
         auto value = getPropertyCSSValue(shorthand.properties()[i]);
         ASSERT(!value || is<CSSPrimitiveValue>(value));
         if (!is<CSSPrimitiveValue>(value))
-            return String();
-
-        // FIXME: Remove this isCSSWideKeyword check after we do this consistently for all shorthands in getPropertyValue.
-        if (auto keyword = downcast<CSSPrimitiveValue>(*value).valueID(); isCSSWideKeyword(keyword)) {
-            if (!i)
-                cssWideKeyword = keyword;
-            else if (cssWideKeyword != keyword)
-                return String();
-            else if (i == 3)
-                return value->cssText();
-            continue;
-        }
-        if (cssWideKeyword != CSSValueInvalid)
             return String();
 
         auto pair = downcast<CSSPrimitiveValue>(*value).pairValue();
@@ -1243,43 +1190,35 @@ String StyleProperties::borderRadiusShorthandValue(const StylePropertyShorthand&
 
 String StyleProperties::borderPropertyValue(const StylePropertyShorthand& width, const StylePropertyShorthand& style, const StylePropertyShorthand& color) const
 {
-    const StylePropertyShorthand properties[3] = { width, style, color };
-    String commonValue;
     StringBuilder result;
-    for (size_t i = 0; i < WTF_ARRAY_LENGTH(properties); ++i) {
-        String value = getCommonValue(properties[i]);
+    for (auto shorthand : { width, style, color }) {
+        auto isAllImplicitInitial = [&]() {
+            for (auto longhand : shorthand) {
+                if (auto value = getPropertyCSSValue(longhand); !value || !value->isImplicitInitialValue())
+                    return false;
+            }
+            return true;
+        };
+        if (isAllImplicitInitial())
+            continue;
+        String value = getCommonValue(shorthand);
         if (value.isNull())
             return String();
-        if (!i)
-            commonValue = value;
-        else if (commonValue != value)
-            commonValue = String();
-        if (value == "initial"_s)
-            continue;
-        if (!result.isEmpty())
-            result.append(' ');
-        result.append(value);
+        result.append(result.isEmpty() ? "" : " ", value);
     }
-    if (isCSSWideValueKeyword(commonValue))
-        return commonValue;
     return result.toString();
 }
 
 String StyleProperties::breakInsideShorthandValue(const StylePropertyShorthand& shorthand) const
 {
     ASSERT(shorthand.length() == 1);
-    CSSPropertyID longhand = shorthand.properties()[0];
+    auto longhand = shorthand.properties()[0];
     ASSERT(longhand == CSSPropertyBreakInside);
-    auto valueID = propertyAsValueID(longhand);
-    if (!valueID)
-        return nullString();
-    // FIXME: Remove this isCSSWideKeyword check after we do this consistently for all shorthands in getPropertyValue.
-    if (isCSSWideKeyword(*valueID))
-        return nameString(*valueID);
-    switch (*valueID) {
+    auto keyword = propertyAsValueID(longhand).value_or(CSSValueInvalid);
+    switch (keyword) {
     case CSSValueAuto:
     case CSSValueAvoid:
-        return nameString(*valueID);
+        return nameString(keyword);
     default:
         return nullString();
     }
@@ -1288,22 +1227,17 @@ String StyleProperties::breakInsideShorthandValue(const StylePropertyShorthand& 
 String StyleProperties::pageBreakValue(const StylePropertyShorthand& shorthand) const
 {
     ASSERT(shorthand.length() == 1);
-    CSSPropertyID longhand = shorthand.properties()[0];
+    auto longhand = shorthand.properties()[0];
     ASSERT(longhand == CSSPropertyBreakAfter || longhand == CSSPropertyBreakBefore);
-    auto valueID = propertyAsValueID(longhand);
-    if (!valueID)
-        return nullString();
-    // FIXME: Remove this isCSSWideKeyword check after we do this consistently for all shorthands in getPropertyValue.
-    if (isCSSWideKeyword(*valueID))
-        return nameString(*valueID);
-    switch (*valueID) {
+    auto keyword = propertyAsValueID(longhand).value_or(CSSValueInvalid);
+    switch (keyword) {
     case CSSValuePage:
         return "always"_s;
     case CSSValueAuto:
     case CSSValueAvoid:
     case CSSValueLeft:
     case CSSValueRight:
-        return nameString(*valueID);
+        return nameString(keyword);
     default:
         return nullString();
     }
@@ -1314,19 +1248,14 @@ String StyleProperties::webkitColumnBreakValue(const StylePropertyShorthand& sho
     ASSERT(shorthand.length() == 1);
     CSSPropertyID longhand = shorthand.properties()[0];
     ASSERT(longhand == CSSPropertyBreakAfter || longhand == CSSPropertyBreakBefore);
-    auto valueID = propertyAsValueID(longhand);
-    if (!valueID)
-        return nullString();
-    // FIXME: Remove this isCSSWideKeyword check after we do this consistently for all shorthands in getPropertyValue.
-    if (isCSSWideKeyword(*valueID))
-        return nameString(*valueID);
-    switch (*valueID) {
+    auto keyword = propertyAsValueID(longhand).value_or(CSSValueInvalid);
+    switch (keyword) {
     case CSSValueColumn:
         return "always"_s;
     case CSSValueAvoidColumn:
         return "avoid"_s;
     case CSSValueAuto:
-        return nameString(*valueID);
+        return nameString(keyword);
     default:
         return nullString();
     }
@@ -1685,6 +1614,7 @@ static constexpr bool canUseShorthandForLonghand(CSSPropertyID shorthandID, CSSP
     case CSSPropertyTextEmphasis:
     case CSSPropertyWebkitTextStroke:
         return false;
+
     default:
         return true;
     }
@@ -1703,6 +1633,9 @@ StringBuilder StyleProperties::asTextInternal() const
         auto propertyID = property.id();
         ASSERT(isLonghand(propertyID) || propertyID == CSSPropertyCustom);
         Vector<CSSPropertyID> shorthands;
+
+        if (property.value()->isImplicitInitialValue() && !CSSProperty::isInheritedProperty(propertyID))
+            continue;
 
         if (is<CSSPendingSubstitutionValue>(property.value())) {
             auto& substitutionValue = downcast<CSSPendingSubstitutionValue>(*property.value());
@@ -1741,9 +1674,6 @@ StringBuilder StyleProperties::asTextInternal() const
 
         if (value.isNull())
             value = property.value()->cssText();
-
-        if (propertyID != CSSPropertyCustom && value == "initial"_s && !CSSProperty::isInheritedProperty(propertyID))
-            continue;
 
         if (numDecls++)
             result.append(' ');
